# email-agent-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yaml
docker/: Dockerfile  docker-compose.yml
docker/scripts/: wait-for-db.sh
email_agent/: __init__.py
email_agent/agent/: __init__.py  configuration.py  graph.py  prompts.py  schemas.py  utils.py
email_agent/agent/eval/: __init__.py  email_dataset.py  evaluate_triage.py
email_agent/agent/tools/: __init__.py  base.py
email_agent/agent/tools/default/: __init__.py  calendar_tools.py  email_tools.py
email_agent/agent/tools/gmail/: __init__.py  gmail_tools.py  prompt_templates.py
email_agent/agent/tools/rag/: __init__.py  bge_embeddings.py  rag_tools.py
email_agent/agent/tools/rag/guidance_docs/: expense_policy.md  meeting_policy.md
email_agent/agent_api/: __init__.py  auth.py  cli.py  logging_utils.py  schemas.py  server.py  storage.py  web_routes.py  worker.py
email_agent/agent_api/templates/: base.html  dashboard.html  review.html  setup.html  status.html
email_agent/agent_api/templates/partials/: action_result.html  job_list.html
email_agent/config/: base.yaml  logging.yaml
scripts/: get_gmail_token.py
tests/: test_auth.py  test_storage.py  test_web_routes.py
